# ai-platform

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  PROGRESS_SUMMARY.md  README.md  config.json5  eval-ai-rag.md  eval-gemini3.md  eval-glm46.md  eval.md  main.py  pyproject.toml  requirements.txt  test_config.py  test_env.py  test_import.py  verify_setup.py
agent-claude-gpt51/: .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  README.md  main.py  pyproject.toml
agent-claude-gpt51/.specify/memory/: constitution.md
agent-claude-gpt51/app/: config.py
agent-claude-gpt51/app/services/: db.py
agent-claude-gpt51/scripts/: verify_env.py
agent-claude-gpt51/specs/001-onboarding-agents/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
agent-claude-qwen3/: .gitignore  CLAUDE.md  README.md  main.py  onboarding.db  prompts.md  pyproject.toml  ruff.toml  update.md
agent-claude-qwen3/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
agent-claude-qwen3/specs/001-employee-onboarding-agents/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
agent-claude-qwen3/src/: app.py
agent-claude-qwen3/src/agents/: __init__.py  identity_verification.py  information_collection.py  qa.py  supervisor.py  tool_calling.py
agent-claude-qwen3/src/api/: __init__.py  id_photo.py  information.py  sessions.py
agent-claude-qwen3/src/models/: __init__.py  base.py  credentials.py  employee.py  id_photo.py  onboarding_checklist.py
agent-claude-qwen3/src/repositories/: employee_repository.py
agent-claude-qwen3/src/services/: id_verification_service.py  mcp_client.py  position_service.py  qwen_client.py  session_service.py
agent-claude-qwen3/src/utils/: config.py  database.py  exceptions.py  validators.py
agent-claude-qwen3/tests/integration/: test_complete_onboarding.py  test_main.py  test_mcp_integration.py  test_qa.py
agent-claude-qwen3/tests/unit/: test_example.py
agent-codex-gpt51/: main.py  prompts.md  pyproject.toml  update.md
agent-codex-gpt51/src/: __init__.py  agents.py  app.py  checklist.py  config.py  llm.py  main.py  models.py  prompts.py  services.py  state.py  tools.py  workflow.py
agent-codex-gpt51/tests/: test_flow.py  test_services.py
arg-claude-glm46/: README.md  main.py  pyproject.toml
arg-claude-glm46/.specify/memory/: constitution.md
arg-claude-glm46/.specify/templates/: plan-template.md
arg-claude-glm46/docs/: api.md  architecture.md
arg-claude-glm46/specs/001-rag-backend/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
arg-claude-glm46/src/cli/: chat.py  indexing.py  search.py
arg-claude-glm46/src/config/: __init__.py  database.py
arg-claude-glm46/src/lib/: dashscope_client.py  langchain_setup.py  logging_config.py  metrics.py  pdf_parser.py
arg-claude-glm46/src/models/: __init__.py  chunk.py  conversation.py  conversation_turn.py  kg.py  query.py  search_result.py
arg-claude-glm46/tests/contract/: test_chat.py  test_indexing.py  test_search.py
arg-claude-glm46/tests/integration/: test_chat.py  test_pdf_parsing.py  test_rag_pipeline.py  test_search.py
arg-claude-glm46/tests/unit/: test_logging.py  test_metrics.py
arg-claude-qwen3/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml  update.md
arg-claude-qwen3/.specify/memory/: constitution.md
arg-claude-qwen3/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
arg-claude-qwen3/docs/: README.md  architecture.md  cli_help.md  deployment.md
arg-claude-qwen3/specs/001-rag-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
arg-claude-qwen3/src/cli/: chat.py  indexing.py  main.py  search.py
arg-claude-qwen3/src/lib/: config.py  database.py  embedding_client.py  exceptions.py  llm_client.py  logger.py  monitoring.py  rate_limiter.py  rerank_client.py  security.py  utils.py  validation.py
arg-claude-qwen3/src/models/: conversation_context.py  document.py  document_chunk.py  document_collection.py  knowledge_graph_node.py  knowledge_graph_relationship.py  query.py  retrieval_result.py  vector_embedding.py
arg-claude-qwen3/src/services/: answer_generator.py  chat_service.py  conversation_manager.py  document_chunker.py  embedding_generator.py  graph_search.py  indexing_service.py  kg_extractor.py  pdf_parser.py  query_expander.py  retrieval_service.py  vector_search.py
arg-claude-qwen3/tests/: conftest.py
arg-claude-qwen3/tests/contract/: test_api_contracts.py
arg-codex-gpt51/: README.md  api.py  design.md  eval.py  main.py  orchestration.py  pyproject.toml  update.md
arg-codex-gpt51/evals/: dataset.md  dataset_chat.py  experiment_chat.py
arg-codex-gpt51/services/: clients.py  embeddings.py  fallbacks.py  generation.py  graph.py  indexing.py  models.py  orchestration.py  post_retrieval.py  pre_retrieval.py  retrieval.py
arg-codex-gpt51/src/: clients.py  config.py  embeddings.py  generation.py  graph.py  indexing.py  models.py  orchestration.py  parsers.py  post_retrieval.py  pre_retrieval.py  retrieval.py  util.py
arg-codex-gpt51/tests/: test_integration.py
mcp-claude-gpt51/: .dockerignore  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
mcp-claude-gpt51/server/: audit.py  config.py  id_validator.py  models.py  password.py  transliteration.py
mcp-claude-qwen3/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
mcp-claude-qwen3/src/: config.py
rag-pltform/: .gitignore  COMPLETION.md  COMPLETION_MESSAGE.md  FINAL_PROJECT_SUMMARY.md  FINAL_STATUS_REPORT.md  KEY_FILES_SUMMARY.md  PROJECT_COMPLETED_SUCCESSFULLY  PROJECT_COMPLETION_ANNOUNCEMENT.md  PROJECT_SUMMARY.md  README.md  SUMMARY.md  cli.py  complete_pipeline_demo.py  demo.py  example_usage.py  main.py  pyproject.toml  requirements.txt  start_rag_platform.sh  verify_installation.py
rag-pltform/examples/: rag_pipeline_demo.py
rag-pltform/tests/: test_core_components.py  test_models.py  test_rag_pipeline.py  test_services.py
(+346 files in other folders)
