[project]
name = "mcp-claude-gpt51"
version = "0.1.0"
description = "MCP server providing email and git account provisioning tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "fastapi-mcp>=0.2.0",
  "uvicorn[standard]>=0.30.1",
  "pydantic>=2.9.0",
  "pypinyin>=0.50.0",
  "python-dotenv>=1.0.1",
  "anyio>=4.4.0",
  "httpx>=0.27.2",
  "typing-extensions>=4.12.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
  "black>=24.8.0",
  "pyright>=1.1.389"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --strict-markers --disable-warnings"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pyright]
pythonVersion = "3.12"
include = ["server", "tests", "main.py"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
